# garden

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md  deploy.sh
examples/: world_update.rs
src/: console_renderer.rs  lib.rs  main.rs  thread_pool.rs
src/world/: garden_pathfinding.rs  mod.rs  pathfinding.rs  tests.rs
templates/: index.html
