[package]
name = "garden"
version = "0.1.0"
authors = ["Preston Hale <theprestonhale@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.8.0"
rand_core = "0.6.0"
rand_pcg = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.8"
httparse = "1.3.4"
sha-1 = "0.9.2"
base64 = "0.13.0"
tungstenite = "0.11.1"
petgraph = "0.5.1"
pathfinding = "2.1.1"

# Console Renderer
console = "0.13.0"

[dev-dependencies]
native-tls = "0.2.6"

[features]
default = []
console-renderer = []

[profile.release]
debug = true